# printfriendly

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml  static.yml
browser/: index.html
browser/css/: app.css  print.css
browser/js/: analyzer.js  app.js  extractor.js  layout.js
src/printfriendly/: __init__.py  analyzer.py  cli.py  extractor.py  layout.py  renderer.py  web.py
src/printfriendly/styles/: _base.css  magazine.css  minimal.css
src/printfriendly/templates/: article.html
src/printfriendly/templates/components/: figure.html  header.html  hero.html  pullquote.html
src/printfriendly/web_templates/: index.html
